Fix unnecessary horizontal scroll on webpage

--- a/css/style.css
+++ b/css/style.css
@@ -9974,3 +9974,8 @@ textarea.form-control {
 .body {
 	max-width:100%;
 }
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
